karnc/tests/fixtures/positive/156_state_transition/src/turnstile.karn
context turnstile

type Gate = enum { Locked, Unlocked }

agent Turnstile {
  key id: String

  state {
    gate: Gate = Locked,
  }

  on call unlock() -> Effect[Result[(), String]] {
    commit { ...self.state, gate: Unlocked }
    Ok(())
  }
}
