karnc/tests/fixtures/negative/120_state_initialiser_not_static/src/demo.karn
context demo

type Light = enum { Red, Green }

agent Signal {
  key id: String

  state {
    colour: Light = self.state.colour,
  }

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
